로그 파일에 데이터베이스 관련 오류 메시지를 추가하고, `CodeItemTreeService` 클래스에서 ID 검증 로직을 개선하여 공백 문자열 체크를 `isEmpty()`로 변경함.